--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 settings:
-  title: 'Status'
+  title: 'Output Status'
   url: 'https://status-page.eidam.dev' # used for Slack messages
-  logo: output-logo-222.svg # image in ./public/ folder
+  logo: output-logo-o.svg # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
